feat: Изменен дизайн и дополнены правила

--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -1,11 +1,12 @@
 <div class="relative">
-    <tui-carousel [(index)]="carouselIndex" [duration]="3000" class="size-full">
+    <tui-carousel [(index)]="carouselIndex" [duration]="4000" class="!h-auto">
         @for (item of images; track $index) {
-        <img *tuiItem [src]="item" class="h-[500px] object-cover object-center" />
+        <img *tuiItem [src]="item" class="h-full md:h-[500px] object-cover object-center" />
         }
     </tui-carousel>
+    <tui-pagination size="s" [length]="images.length" [(index)]="carouselIndex" class="mt-2" />
 </div>
-<div class="flex flex-wrap items-center gap-7 p-10">
+<div class="flex flex-wrap items-center gap-7 pt-0 p-10">
     @for (item of news; track $index; let first = $first) {
     <app-news-card [data]="item" class="!h-auto lg:!h-[280px]" />
     }
