--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -3,7 +3,7 @@
     class="p-4 sm:p-8 flex sm:flex-row flex-col gap-4 items-start justify-between bg-center bg-cover h-full rounded-xl"
 >
     <div
-        class="relative max-w-full lg:max-w-[60%] p-0.5 sm:p-2 flex flex-col gap-2 before:backdrop-blur-xl before:absolute before:size-full before:rounded-xl z-10 before:-z-40"
+        class="relative max-w-full lg:max-w-[60%] p-0.5 sm:p-2 flex flex-col gap-2 before:backdrop-blur-2xl before:absolute before:size-full before:rounded-xl z-10 before:-z-40"
     >
         <p class="text-neutral-50 text-xl sm:text-2xl mx-4 my-1">{{ data().title }}</p>
         <p class="text-neutral-50 text-base font-light mx-4" [innerHtml]="data().description"></p>
