--- a/last-hearth-landing/src/app/profile/profile.component.html
+++ b/last-hearth-landing/src/app/profile/profile.component.html
@@ -10,7 +10,7 @@
             </div>
             } @else {
             <div
-                class="flex rounded-2xl justify-center items-center cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-2xl hover:opacity-80"
+                class="flex rounded-2xl justify-center items-center cursor-pointer transition-all duration-300 hover:scale-105 hover:shadow-2xl"
                 (click)="triggerFileInput()"
             >
                 <tui-icon icon="@tui.user" class="!text-6xl !self-center" />
