--- a/last-hearth-landing/src/app/start-game/start-game.component.html
+++ b/last-hearth-landing/src/app/start-game/start-game.component.html
@@ -50,14 +50,8 @@
         <div class="flex flex-col gap-1">
             <p class="text-lh-primary text-2xl font-bold">Играйте</p>
             <p class="text-lh-primary text-base">
-                <a
-                    class="text-blue-400 font-bold border-dashed border-b"
-                    href="https://www.vintagestory.at/store/category/1-game-account-game-servers/"
-                    target="_blank"
-                >
-                    Войдите в игру
-                </a>
-                и добавьте наш сервер. Инструкции для входа доступны в личном кабинете после прохождения верификации.
+                Войдите в игру и добавьте наш сервер. Инструкции для входа доступны в личном кабинете после прохождения
+                верификации.
             </p>
         </div>
     </div>
