--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -1,10 +1,10 @@
-<div class="pt-0 lg:pt-8 flex flex-col justify-center items-center lg:gap-8">
-    <app-header class="w-full mb-8 lg:w-[50%]" />
+<div class="pt-0 xl:pt-8 flex flex-col justify-center items-center xl:gap-8">
+    <app-header class="w-full mb-8 xl:w-[50%]" />
 
-    <div class="h-auto w-full lg:w-[50%] flex">
+    <div class="h-auto w-full xl:w-[50%] flex">
         <div class="flex flex-col items-center w-full">
             <!-- Блок навигации -->
-            <div class="flex gap-2 justify-center md:justify-between md:gap-4 w-full mb-4">
+            <div class="flex gap-2 justify-center xl:justify-between md:gap-4 w-full mb-4">
                 <div class="flex gap-2">
                     <a
                         (click)="select = 'home'"
@@ -16,18 +16,19 @@
                     </a>
                     <button
                         [routerLink]="['/start-game']"
-                        class="nav-button md:min-w-20 text-white flex items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                        class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
                         [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'startGame' }"
                     >
                         <tui-icon icon="@tui.gamepad-2" />
-                        НАЧАТЬ ИГРУ
+                        <span class="hidden md:block">НАЧАТЬ ИГРУ</span>
                     </button>
                     <button
                         [routerLink]="['/rules']"
-                        class="nav-button md:min-w-20 text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                        class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
                         [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules' }"
                     >
-                        ПРАВИЛА
+                        <tui-icon icon="@tui.file-text" />
+                        <span class="hidden md:block">ПРАВИЛА</span>
                     </button>
                 </div>
                 <div class="flex flex-row gap-2">
