feat: Добавлен пункт правил о пожертвованиях

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -1346,4 +1346,123 @@
             </div>
         </tui-expand>
     </div>
+
+    <!-- 13. -->
+    <div class="flex flex-col gap-2 shadow-2xs">
+        <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isDonations = !isDonations">
+            <p class="text-2xl text-lh-primary font-bold">13. Положение о пожертвованиях</p>
+            <tui-icon
+                icon="@tui.chevron-down"
+                [ngClass]="{ '!rotate-180': isDonations }"
+                class="text-lh-primary transition-all"
+            />
+        </div>
+        <tui-expand [expanded]="isDonations">
+            <div class="flex flex-col gap-2">
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.1</span> Пожертвования, осуществляемые Пользователями в пользу
+                    Администрации игрового проекта Last Hearth через сторонние платформы (включая, но не ограничиваясь
+                    Boosty.to и Donation Alerts), представляют собой добровольные безвозмездные перечисления денежных
+                    средств, направленные на развитие и техническую поддержку игрового сервера. Такие перечисления
+                    регулируются положениями статьи 582 Гражданского кодекса Российской Федерации как пожертвования и не
+                    являются платой за оказание услуг или предоставление товаров.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.2</span> В отдельных случаях, по собственному усмотрению, Администрация
+                    может выразить благодарность Пользователю в форме символического внутриигрового титула и кита
+                    ресурсов, не имеющих денежной или имущественной ценности и предоставляемых исключительно в знак
+                    признательности.
+                </p>
+                <p class="text-xl pl-8"><span class="font-bold">13.3</span> Кит игровых ресурсов:</p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> представляет собой набор внутриигровых предметов, ресурсов или
+                    привилегий, предназначенных исключительно для декоративного либо ролевого использования в игровом
+                    процессе;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не имеет реальной или денежной стоимости и не является предметом
+                    гражданско‑правовых отношений по договору купли‑продажи, дарения, мены или иного
+                    возмездного/безвозмездного отчуждения;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не подлежит передаче другим игрокам, обмену, продаже, наследованию
+                    или уступке третьим лицам;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не является автоматическим и осуществляется вручную, по решению
+                    Администрации;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не представляет собой вознаграждение за пожертвование;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не создаёт у Пользователя имущественных прав или ожиданий на
+                    получение аналогичных «наград» в будущем;
+                </p>
+                <p class="text-xl pl-8"><span class="font-bold">13.4</span> Титул и связанный с ним кит ресурсов:</p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> присваиваются и выдаются в зависимости от размера пожертвования,
+                    определяемого Администрацией:
+                </p>
+                <p class="text-xl pl-20"><span class="font-bold">•</span> «Странствующий рыцарь» (350 ₽ и выше)</p>
+                <p class="text-xl pl-20"><span class="font-bold">•</span> «Барон» (900 ₽ и выше)</p>
+                <p class="text-xl pl-20"><span class="font-bold">•</span> «Граф» (1800 ₽ и выше)</p>
+                <p class="text-xl pl-20"><span class="font-bold">•</span> «Великий герцог» (6000 ₽ и выше)</p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> предоставляются единовременно и не продлеваются автоматически;
+                    повторное присвоение возможно при новом пожертвовании, соответствующем условиям.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.5</span> Присвоение титула и выдача связанного с ним кита ресурсов
+                    осуществляются исключительно на безвозмездной основе, без возникновения у Пользователя каких‑либо
+                    имущественных прав, а также не являются оплатой за товары или услуги.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.6</span> Присвоение титула и выдача кита ресурсов:
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не порождают обязанности Администрации по предоставлению дальнейших
+                    услуг или ресурсов;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> могут быть аннулированы без компенсации в случае нарушения
+                    Пользователем правил проекта;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> по своему содержанию являются символическим подарком, не
+                    подпадающим под действие главы 30, 37 или 39 ГК РФ.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.7</span> Пожертвования не подлежат возврату, за исключением случаев,
+                    прямо предусмотренных законодательством Российской Федерации (например, при ошибочном списании по
+                    технической вине платёжной платформы).
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.8</span> Совершая пожертвование и принимая титул с китом ресурсов,
+                    Пользователь подтверждает, что:
+                </p>
+                <p class="text-xl pl-16"><span class="font-bold">•</span> действует добровольно и осознанно;</p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> ознакомлен и полностью согласен с настоящими условиями;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не имеет и не будет предъявлять имущественных или правовых
+                    претензий к Администрации в связи с присвоением титула, выдачей кита ресурсов или их аннулированием;
+                </p>
+                <p class="text-xl pl-16">
+                    <span class="font-bold">•</span> не расценивает пожертвование как оплату товара, услуги или права.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.9</span> Настоящий документ и вся информация, размещённая на данном
+                    ресурсе, не являются публичной офертой в смысле статьи 437, часть 2, Гражданского кодекса Российской
+                    Федерации.
+                </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">13.10</span> Администрация оставляет за собой право в одностороннем порядке
+                    изменять настоящее Положение, приостанавливать или прекращать присвоение титулов и выдачу китов
+                    ресурсов в любой момент без предварительного уведомления.
+                </p>
+            </div>
+        </tui-expand>
+    </div>
 </div>
