feat: добавлена ссылка на бусти

--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -40,6 +40,13 @@
                     >
                         <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'" />
                     </button>
+                    <a
+                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
+                        href="https://boosty.to/lisov"
+                        target="_blank"
+                    >
+                        <img src="/images/Boosty.svg" />
+                    </a>
                 </div>
             </div>
 
