feat: добавлена ссылка на дискорд

--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -47,6 +47,13 @@
                     >
                         <img src="/images/Boosty.svg" />
                     </a>
+                    <a
+                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
+                        href="https://discord.gg/FZb7SGrSFy"
+                        target="_blank"
+                    >
+                        <img src="/images/discord.svg" class="h-6 w-6" />
+                    </a>
                 </div>
             </div>
 
