fix: исправление формулировки

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -797,7 +797,10 @@
                                 • Вор может защищаться исключительно в случае обнаружения и получения первого урона, но
                                 не имеет права инициировать нападение первым, а также вести преследование жертвы.
                             </p>
-                            <p class="text-xl pl-20">• Вор имеет право на сбор любого урожая и убийство скота.</p>
+                            <p class="text-xl pl-20">
+                                • Вор имеет право на сбор любого урожая и кражу скота посредством клеток (убийство скота
+                                запрещается).
+                            </p>
                             <p class="text-xl pl-16 text-lh-primary font-bold">
                                 <span class="font-bold">3.1.4</span> Вор обязан:
                             </p>
