--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -6,14 +6,18 @@
             <p class="text-lh-primary text-base">
                 Приобрести игру можно на
                 <a
-                    class="text-blue-400 font-bold border-dashed border-b"
+                    class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
                     href="https://www.vintagestory.at/store/category/1-game-account-game-servers/"
                     target="_blank"
                 >
                     официальном сайте
                 </a>
                 (рекомендуется) или временно попробовать на
-                <a class="text-blue-400 font-bold border-dashed border-b" href="https://fplay.su/" target="_blank">
+                <a
+                    class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
+                    href="https://fplay.su/"
+                    target="_blank"
+                >
                     fplay.su
                 </a>
                 (рекомендуем приобрести лицензию)
@@ -53,7 +57,7 @@
                 вы всегда можете попросить помощи у других игроков или у администрации. Узнать свой ответ быстро можно у
                 нас в
                 <a
-                    class="text-blue-400 font-bold border-dashed border-b"
+                    class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100"
                     href="https://discord.gg/FZb7SGrSFy"
                     target="_blank"
                 >
