--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,60 +1,101 @@
 @let online = online$ | async; @let time = time$ | async;
-
-<div class="flex justify-center sm:justify-between px-4 sm:px-0">
-    <div
-        class="hidden mt-8 z-10 sm:flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
-    >
-        <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
-            <img src="/images/logo.png" alt="Логотип сервера" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
-            <p
-                [ngClass]="{'!hidden 2xl:!block': userService.isAuthorize()}"
-                class="hidden sm:block text-2xl sm:text-5xl text-white font-[500] text-nowrap"
+<div class="flex flex-col xl:gap-24 gap-8">
+    <div class="flex justify-center sm:justify-between px-4 sm:px-0">
+        <!-- Логотип -->
+        <div
+            class="hidden mt-8 z-10 sm:flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
+        >
+            <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
+                <img src="/images/logo.png" alt="Логотип сервера" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
+                <p
+                    [ngClass]="{'!hidden 2xl:!block': userService.isAuthorize()}"
+                    class="hidden sm:block text-2xl sm:text-5xl text-white font-[500] text-nowrap"
+                >
+                    Last Hearth
+                </p>
+            </div>
+        </div>
+        <!-- Табло информации о сервере -->
+        <div class="flex gap-2 sm:gap-4 items-center">
+            <div
+                class="mt-8 z-10 pt-1.5 sm:pt-3 flex h-[5rem] flex-col gap-1 sm:gap-3 w-fit items-end justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
             >
-                Last Hearth
-            </p>
+                <div class="flex w-full px-4 gap-4 justify-center items-center">
+                    <div class="flex gap-0.5 items-center">
+                        <p class="text-3xl sm:text-5xl text-white">{{ online?.count ? online?.count : '-' }}</p>
+                        <p class="text-xs sm:text-sm text-white opacity-70">/</p>
+                        <p class="text-xs sm:text-sm text-white opacity-70">{{ online?.max ? online?.max : '-' }}</p>
+                    </div>
+                    <div class="text-white">
+                        <p class="text-base sm:text-2xl opacity-90 leading-6">Игроков</p>
+                        <p class="text-sm sm:text-xl opacity-65 self-start leading-6">{{ time ? time : '-' }}</p>
+                    </div>
+                </div>
+                <progress
+                    [max]="online?.max ? online?.max : 0"
+                    size="s"
+                    tuiProgressBar
+                    [value]="online?.count ? online?.count : 0"
+                    class="progress"
+                ></progress>
+            </div>
+            @if(userService.isAuthorize()) {
+            <div
+                class="mt-8 z-10 flex w-fit h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
+            >
+                <div class="rounded-2xl gap-1 px-1 sm:px-3 flex items-center">
+                    <p class="text-sm sm:text-2xl text-white">{{userService.userName}}</p>
+                    @if(userService.userImage){
+                    <img
+                        [src]="userService.userImage"
+                        alt="Аватар пользователя"
+                        class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 border-neutral-300 border-2"
+                    />
+                    }@else {
+                    <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 !text-6xl text-white" />
+                    }
+                </div>
+            </div>
+            }
         </div>
     </div>
-
-    <div class="flex gap-2 sm:gap-4 items-center">
-        <div
-            class="mt-8 z-10 pt-1.5 sm:pt-3 flex h-[5rem] flex-col gap-1 sm:gap-3 w-fit items-end justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
-        >
-            <div class="flex w-full px-4 gap-4 justify-center items-center">
-                <div class="flex gap-0.5 items-center">
-                    <p class="text-3xl sm:text-5xl text-white">{{ online?.count ? online?.count : '-' }}</p>
-                    <p class="text-xs sm:text-sm text-white opacity-70">/</p>
-                    <p class="text-xs sm:text-sm text-white opacity-70">{{ online?.max ? online?.max : '-' }}</p>
-                </div>
-                <div class="text-white">
-                    <p class="text-base sm:text-2xl opacity-90 leading-6">Игроков</p>
-                    <p class="text-sm sm:text-xl opacity-65 self-start leading-6">{{ time ? time : '-' }}</p>
-                </div>
-            </div>
-            <progress
-                [max]="online?.max ? online?.max : 0"
-                size="s"
-                tuiProgressBar
-                [value]="online?.count ? online?.count : 0"
-                class="progress"
-            ></progress>
+    <!-- Блок навигации -->
+    <div class="flex gap-2 justify-center xl:justify-between md:gap-4 w-full mb-4">
+        <div class="flex gap-2">
+            <a
+                (click)="select = 'home'"
+                class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
+                [routerLink]="['/home']"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'home' }"
+            >
+                <tui-icon icon="@tui.house" />
+            </a>
+            <button
+                [routerLink]="['/start-game']"
+                class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'startGame' }"
+            >
+                <tui-icon icon="@tui.gamepad-2" />
+                <span class="hidden md:block">НАЧАТЬ ИГРУ</span>
+            </button>
+            <button
+                [routerLink]="['/rules']"
+                class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules' }"
+            >
+                <tui-icon icon="@tui.file-text" />
+                <span class="hidden md:block">ПРАВИЛА</span>
+            </button>
         </div>
-        @if(userService.isAuthorize()) {
-        <div
-            class="mt-8 z-10 flex w-fit h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
-        >
-            <div class="rounded-2xl gap-1 px-1 sm:px-3 flex items-center">
-                <p class="text-sm sm:text-2xl text-white">{{userService.userName}}</p>
-                @if(userService.userImage){
-                <img
-                    [src]="userService.userImage"
-                    alt="Аватар пользователя"
-                    class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 border-neutral-300 border-2"
-                />
-                }@else {
-                <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 !text-6xl text-white" />
-                }
-            </div>
+        <div class="flex flex-row gap-2">
+            <button
+                (click)="userService.isAuthorize() ? '' : signIn()"
+                [routerLink]="userService.isAuthorize() ? ['/profile'] : ''"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'profile' }"
+                class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
+            >
+                <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'" />
+            </button>
         </div>
-        }
     </div>
 </div>
