--- a/last-hearth-landing/src/app/layout/layout.component.html
+++ b/last-hearth-landing/src/app/layout/layout.component.html
@@ -1,1 +1,11 @@
-<router-outlet/>
+<div>
+    <div class="flex justify-center">
+        <app-header class="w-full xl:w-[50%]" />
+    </div>
+
+    <router-outlet />
+</div>
+
+<div class="flex justify-center">
+    <app-footer class="w-full xl:w-[50%] main-panel !rounded-t-xl !rounded-b-none" />
+</div>
