--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -2,7 +2,7 @@
     <div class="flex gap-8 items-start">
         <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">1</p>
         <div class="flex flex-col gap-1">
-            <p class="text-lh-primary text-2xl font-bold">Скачайте игру</p>
+            <p class="text-lh-primary text-2xl font-bold">Скачайте игру версии 1.20.12</p>
             <p class="text-lh-primary text-base">
                 Приобрести игру можно на
                 <a
@@ -27,7 +27,7 @@
             <p class="text-lh-primary text-2xl font-bold">Добавьте наш сервер</p>
             <p class="text-lh-primary text-base">
                 Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>85.28.47.225</b><br />Пароль:
-                <b>Kexibqcthdthdvbht!!##17ONLYLAST</b>.
+                <b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b>.
             </p>
         </div>
     </div>
