--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -31,7 +31,7 @@
             <p class="text-lh-primary text-2xl font-bold">Добавьте наш сервер</p>
             <p class="text-lh-primary text-base">
                 Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>85.28.47.225</b><br />Пароль:
-                <b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b>.
+                <b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b>
             </p>
         </div>
     </div>
