feat: Добавлена страница титулов, публичная оферта

--- a/last-hearth-landing/src/app/layout/footer/footer.component.html
+++ b/last-hearth-landing/src/app/layout/footer/footer.component.html
@@ -15,13 +15,13 @@
                 >
                     Политика конфиденцильности
                 </a>
-                <!-- <span class="text-lh-primary hidden sm:block"> • </span>
+                <span class="text-lh-primary hidden sm:block"> • </span>
                 <a
-                    [routerLink]="['/privacy-policy']"
+                    [routerLink]="['/public-offer']"
                     class="text-blue-400 font-bold border-dashed border-b hover:text-blue-600 transition-all duration-100 self-start"
                 >
                     Публичная оферта
-                </a> -->
+                </a>
             </div>
         </div>
     </div>
