--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -86,6 +86,14 @@
                 <tui-icon icon="@tui.file-text" />
                 <span class="hidden md:block">ПРАВИЛА</span>
             </button>
+            <button
+                [routerLink]="['/titles']"
+                class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'titles' }"
+            >
+                <tui-icon icon="@tui.crown" />
+                <span class="hidden md:block">ТИТУЛЫ</span>
+            </button>
         </div>
         <div class="flex flex-row gap-2">
             <button
