--- a/last-hearth-landing/src/app/titles/titles.component.html
+++ b/last-hearth-landing/src/app/titles/titles.component.html
@@ -1,3 +1,17 @@
-<p>
-  titles works!
-</p>
+<div class="flex flex-col gap-8 p-6">
+    <p class="text-4xl font-bold text-lh-primary">Магазин титулов</p>
+    <p class="text-2xl font-semibold text-lh-primary">
+        Покупая титул на нашем сервере вы приобретаете уникальные возможности и наборы ресурсов для вашего комфортного
+        развития
+    </p>
+    <div class="flex gap-6 justify-center flex-wrap md:flex-nowrap">
+        @for (item of titles; track $index) { <app-title-card [data]="item"></app-title-card> }
+    </div>
+    <router-outlet />
+    <button
+        (click)="howBuyTitle()"
+        class="text-white transition-all self-center duration-300 font-bold cursor-pointer bg-[rgb(148,90,50)] hover:bg-[#ff7920] rounded-lg py-2.5 px-4"
+    >
+        Получить титул
+    </button>
+</div>
