fix: Апдейт правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -32,7 +32,7 @@
                     позволяющая осуществлять воровство (п.3.1) не взирая на онлайн цели.
                 </p>
                 <p class="text-xl pl-4">
-                    <span class="font-bold">•</span> Ворота - двери размером от 3-х блоков шириной и 3-х блоков высотой.
+                    <span class="font-bold">•</span> Ворота - двери размером от 2-х блоков шириной и 3-х блоков высотой.
                 </p>
                 <p class="text-xl pl-4">
                     <span class="font-bold">•</span> Валюта сервера - монеты использующиеся как средство обмена и оплаты
@@ -506,6 +506,11 @@
                                 <p class="text-xl pl-20">
                                     • Право получить чертеж на упрощенное создание сыродутных печей.
                                 </p>
+                                <p class="text-xl pl-20">• Право подписывать вольности и патенты на селения.</p>
+                                <p class="text-xl pl-20">
+                                    • Право запросить чеканку монет за свои средства (материалы) у города сюзерена,
+                                    размером в 5% от всей казны города сюзерена один раз в три игровых года.
+                                </p>
                             </div>
                         </tui-expand>
                     </div>
@@ -641,6 +646,11 @@
                                     которого можно вычесть 2 человека от населения + не учитывать координаты основания).
                                 </p>
                                 <p class="text-xl pl-20">• Право получить чертеж на сталелитейную печь.</p>
+                                <p class="text-xl pl-20">• Право подписывать вольности и патенты на селения.</p>
+                                <p class="text-xl pl-20">
+                                    • Право запросить чеканку монет за свои средства (материалы) у города сюзерена,
+                                    размером в 15% от всей казны города сюзерена один раз в три игровых года.
+                                </p>
                             </div>
                         </tui-expand>
                     </div>
@@ -815,11 +825,16 @@
                             </p>
                             <p class="text-xl pl-20">
                                 • Вор имеет право доводить до конца уже начатый грабеж, если в процессе цель вышла из
-                                сети.
+                                сети, но после выхода цели, вор не имеет право ломать абсолютно никакие блоки и объекты.
                             </p>
                             <p class="text-xl pl-20">
                                 • Вору запрещается использовать любой инструмент чизла на чужой территории и в процессе
                                 воровства.
+                            </p>
+                            <p class="text-xl pl-20">
+                                • Вор обязан в начале совершения воровства сделать скриншоты: своего инвентаря; брони на
+                                своем персонаже; списка игроков, которые находятся в онлайне; Приветствуются откаты
+                                совершения воровства.
                             </p>
                         </div>
                     </tui-expand>
