#: Доработка политики конфиденциальности

--- a/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
+++ b/last-hearth-landing/src/app/privacy-policy/privacy-policy.component.html
@@ -82,6 +82,14 @@
                 <p class="text-xl pl-16"><span class="font-bold">•</span>IP-адрес</p>
                 <p class="text-xl pl-16"><span class="font-bold">•</span>Адрес электронной почты</p>
                 <p class="text-xl pl-16"><span class="font-bold">•</span>Ссылки на аккаунты в социальных сетях</p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">2.1.5</span> При подключении к игровому серверу клиентское программное
+                    обеспечение передаёт хеш уникального идентификатора безопасности (SID) операционной системы
+                    пользователя, полученный с использованием алгоритма SHA-256. Этот хеш используется исключительно для
+                    идентификации пользователя и обеспечения соблюдения правил сервера, включая возможность блокировки
+                    (бана) в случае нарушений.
+                </p>
+
                 <p class="text-xl pl-4">
                     <span class="font-bold">2.2</span> Настоящая Политика применима только к Сайту и не контролирует и
                     не несет ответственность за сайты третьих лиц, на которые Пользователь может перейти по ссылкам,
@@ -212,6 +220,13 @@
                     <span class="font-bold">5.3.4</span> В целях обеспечения возможности защиты прав и законных
                     интересов Сайта или третьих лиц в случаях, когда Пользователь нарушает пользовательское соглашение.
                 </p>
+                <p class="text-xl pl-8">
+                    <span class="font-bold">5.3.5</span> Передача хеша уникального идентификатора безопасности (SID),
+                    сгенерированного с использованием алгоритма SHA-256, может осуществляться третьим лицам в случаях,
+                    связанных с обеспечением безопасности игрового пространства, выявлением и предотвращением нарушений,
+                    а также для защиты прав и законных интересов Сайта.
+                </p>
+
                 <p class="text-xl pl-4">
                     <span class="font-bold">5.4</span> В случае выявления неточностей в персональных данных,
                     Пользователь может актуализировать их самостоятельно, путем направления уведомления на адрес
