LH | #: Переработана страница титулов. Добавлены новые наборы.

--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -91,8 +91,8 @@
                 class="nav-button w-11 md:w-auto md:min-w-20 text-white flex justify-center items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
                 [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'titles' }"
             >
-                <tui-icon icon="@tui.crown" />
-                <span class="hidden md:block">ТИТУЛЫ</span>
+                <tui-icon icon="@tui.store" />
+                <span class="hidden md:block">МАГАЗИН</span>
             </button>
         </div>
         <div class="flex flex-row gap-2">
