--- a/last-hearth-landing/src/app/titles/how-to-buy/how-to-buy/how-to-buy.component.html
+++ b/last-hearth-landing/src/app/titles/how-to-buy/how-to-buy/how-to-buy.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-8">
-    <p class="text-2xl text-lh-primary font-semibold">Как приобрести титул?</p>
+    <p class="text-2xl text-lh-primary font-semibold">Как приобрести титул или набор?</p>
     <div class="flex flex-col gap-4">
         <div class="flex items-center gap-10">
             <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">1</p>
@@ -16,7 +16,7 @@
         <div class="flex items-center gap-10">
             <p class="text-6xl font-extrabold text-[#bdb093] min-w-12">2</p>
             <p class="text-lh-primary text-2xl font-bold">
-                Отправить донат на сумму стоимости титула, название титула и свой игровой ник в сообщении.
+                Отправить донат на сумму стоимости титула или набора, его название и свой игровой ник в сообщении.
             </p>
         </div>
         <div class="flex items-center gap-10">
