LH | #: Правки: смена ip и правка предметов в наборе исследователь.

--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -30,7 +30,7 @@
         <div class="flex flex-col gap-1">
             <p class="text-lh-primary text-2xl font-bold">Добавьте наш сервер</p>
             <p class="text-lh-primary text-base">
-                Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>85.28.47.225</b><br />Пароль:
+                Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>play.lasthearth.ru</b><br />Пароль:
                 <b>9lHLh9n0satO0%MccHuvVy$gf&#64;f*A2</b>
             </p>
         </div>
